# logos-app-poc

./: .gitignore  README.md  flake.nix  run-dev.sh
app/: CMakeLists.txt  Readme.md  main.cpp  main.qml  resources.qrc  window.cpp  window.h
app/macos/: Info.plist.in  logos.icns  macWindowStyle.h  macWindowStyle.mm  trafficLightsTitleBar.cpp  trafficLightsTitleBar.h
ci/: Jenkinsfile  Jenkinsfile.combined  Jenkinsfile.linux  Jenkinsfile.macos  combined.Jenkinsfile  linux.Jenkinsfile  macos.Jenkinsfile
logos_dapps/chat_ui/: CMakeLists.txt
logos_dapps/counter/: CMakeLists.txt  Counter.qml  CounterBackend.cpp  CounterBackend.h  CounterComponent.cpp  CounterComponent.h  counter_resources.qrc  metadata.json
logos_dapps/counter_qml/: Main.qml  metadata.json
logos_dapps/main_ui/: CMakeLists.txt
logos_dapps/main_ui/src/: AppLauncher.qml  ContentViews.qml  CoreModulesView.qml  DashboardView.qml  MainContainer.cpp  MainContainer.h  MainUIBackend.cpp  MainUIBackend.h  ModulesView.qml  PluginMethodsView.qml  Sidebar.qml  SidebarButton.qml  UiModulesTab.qml  applauncher.cpp  applauncher.h  coremoduleview.cpp  coremoduleview.h  main_ui_plugin.cpp  main_ui_plugin.h  main_ui_resources.qrc  mainwindow.cpp  mainwindow.h  mdiview.cpp  mdiview.h  modulesgenericview.cpp  modulesview.cpp  modulesview.h  packagemanagerview.cpp  packagemanagerview.h  pluginmethodsview.cpp
logos_dapps/main_ui/src/qml/controls/: SidebarCircleButton.qml  SidebarCircleButtonContainer.qml  SidebarIconButton.qml  qmldir
logos_dapps/main_ui/src/qml/panels/: SidebarPanel.qml
logos_dapps/main_ui/src/qml/views/: ModulesView.qml  PluginMethodsView.qml  SettingsView.qml  qmldir
logos_dapps/main_ui/src/restricted/: DenyAllNAMFactory.cpp  DenyAllNAMFactory.h  DenyAllNetworkAccessManager.h  DenyAllReply.cpp  DenyAllReply.h  RestrictedUrlInterceptor.h
logos_dapps/package_manager_ui/: CMakeLists.txt
logos_dapps/package_manager_ui/src/: PackageManager.qml  PackageManagerBackend.cpp  PackageManagerBackend.h  metadata.json  package_manager_ui_plugin.cpp  package_manager_ui_plugin.h  package_manager_ui_resources.qrc  packagemanagerview.cpp  packagemanagerview.h
logos_dapps/webview_app/: CMakeLists.txt  WebView.qml  WebViewAppComponent.cpp  WebViewAppComponent.h  WebViewAppWidget.cpp  WebViewAppWidget.h  WebViewAppWidget_linux.cpp  WebViewAppWidget_mac.mm  WebViewAppWidget_platform.h  WebViewAppWidget_win.cpp  WebViewBridge.cpp  WebViewBridge.h  local.html  metadata.json  webview_resources.qrc
nix/: app.nix  appimage.nix  counter-qml.nix  counter.nix  default.nix  macos-bundle.nix  macos-dmg.nix  main-ui.nix  package-manager-ui.nix  webview-app.nix
qt-ios/: CMakeLists.txt  Main.qml  README.md  build.sh  main.cpp  metadata.json  resources.qrc
src/: CMakeLists.txt  LogosQmlBridge.cpp  LogosQmlBridge.h  MainContainer.cpp  MainContainer.h  MainUIBackend.cpp  MainUIBackend.h  main_ui_plugin.cpp  main_ui_resources.qrc  mdichild.cpp  mdichild.h  mdiview.cpp
src/qml/controls/: SidebarCircleButton.qml  SidebarCircleButtonContainer.qml  SidebarIconButton.qml
src/qml/panels/: SidebarPanel.qml  UiModulesTab.qml  qmldir
src/qml/views/: ContentViews.qml  CoreModulesView.qml  DashboardView.qml  ModulesView.qml  PluginMethodsView.qml  SettingsView.qml
src/restricted/: DenyAllNetworkAccessManager.cpp  RestrictedUrlInterceptor.cpp
